* new examples using the new XRR and XRD simulation-code
* improve handling of SiGe and AlGaAs alloy: alloying on atomic level
* add relaxation parameter to PseudomoprhicMaterial to model partially relaxed
  material
* fix fwhm_exp for very narrow peaks
* fitting of x-ray reflectivity using the lmfit package.
  If you want to use this new feature you have to install lmfit
  see https://pypi.python.org/pypi/lmfit/
* new subpackage simpack for diffraction and reflectivity simulations from
  thin film samples. So far implemented are
  - a basic kinematical diffraction model
  - two dynamical diffraction models (simplified and general 2-beam theory)
  - one mixed dynamical(substrate)/kinematical(layers) model
  - a model for specular reflectivity calculations using a Parrat-like
    formalism
* fwhm_exp function was moved to math's subpackage! This was necessary in
  order to avoid circular dependencies, but anyhow the function also
  fits better there!
* improvements of peak_fit function
  - better ability to handle linear background
  - more stable fitting due to use of deriavitives (PseudoVoigt)
* minor improvement in peak_fit's plotting

v1.2.1, 2016-01-08

* Uiso parsing from CIF files for better structure factors
* support for parsing Rigaku RAS files (Smartlab Guidance)
* new getDetectorPos/Distance routines in QConversion
  This can be used for all types of detectors to determine their position and
  distance for data normalization purposes
* add FuzzyGridder3D class
* add FuzzyGridder2D class (see mailing-list for details)
* add possibility of Pseudo-Angle (basically arbitrary contraints) to Q2AngFit
* add Carbon(diamond), HOPG materials
* enhancement in FIO file parser
* much improved TIFF file parser
* IntensityNormalizer gained possibility to normalize CCD data

v1.2.0, 2015-08-03

* Radicon file support was removed (no test scripts available!)
* replace pytables by faster and more convenient h5py