@@ -58,10 +58,12 @@ copyright = u'2016, Dominik Kriegner, Eugen Wintersberger'
 # |version| and |release|, also used in various other places throughout the
 # built documents.
 #
-# The short X.Y version.
-version = '1.3'
-# The full version, including alpha/beta/rc tags.
-release = '1.3rc1'
+with open(os.path.join('..', '..', 'VERSION')) as version_file:
+    fullversion = version_file.read().strip()
+    # The short X.Y version.
+    version = re.match(r'^(\d+\.)?(\d+)?', fullversion).group()
+    # The full version, including alpha/beta/rc tags.
+    release = fullversion
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
