@@ -1,3 +1,5 @@
+* central version number in VERSION file (also available in the package after
+  importing: import xrayutilities as xu; xu.__version__
 * new examples using the new XRR and XRD simulation-code
 * improve handling of SiGe and AlGaAs alloy: alloying on atomic level
 * add relaxation parameter to PseudomoprhicMaterial to model partially relaxed
